feat: add first cluster of corrections

--- a/app/views/laboratories/index.html.erb
+++ b/app/views/laboratories/index.html.erb
@@ -34,7 +34,7 @@
       <td scope="row"><%= @laboratory.nombre %></td>
       <td scope="row"><%= @laboratory.facultad %></td>
       <td scope="row"><%= @laboratory.campus %></td>
-      <td scope="row"><%= link_to 'Mostar', @laboratory %></td>
+      <td scope="row"><%= link_to 'Mostrar', @laboratory %></td>
     </tr>
     </tbody>
 </table>
