--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -35,7 +35,7 @@ div {
 }
 
 #notice {
-  background-color: rgb(250,210,54);
+  background-color: #2bc139;
   color:white;
   padding: 1%;
   border-radius: 8px;
