--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,5 +1,13 @@
 <p id="notice"><%= notice %></p>
 
+<% if flash[:alert] %>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <strong>Ups! </strong> <%= flash[:alert] %>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+<% end %>
 <h1 style="text-align: center">Plataforma de reservas </h1>
 <div style="text-align: right">
   <a class="btn btn-primary" href="/reservations/my_reservations">Mis reservas</a>
