--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,8 +1,8 @@
-<h2>Información del estudiante</h2>
+
 <div class="row-flex-div" style="justify-content: center;align-items: start;"">
   <div class="column-flex-div">
     <div class="row-profile"><p class="name"><%=@student.nombre%></p></div>
-    <div class="row-profile"><p class="bold">RUT: </p> <p class="element"><%=@student.format_rut%></p></div>
+    <div class="row-profile"><p class="bold">RUT: </p> <p class="element"><%=@student.rut%></p></div>
     <div class="row-profile"><p class="bold">N Alumno:</p> <p class="element"><%=@student.nalumno%></p></div>
     <div class="row-profile"><p class="bold">MIFARE:</p><p class="element"> <%=@student.rfid%></p></div>
     <div class="row-profile"><p class="bold">Sit. Acadámica:</p> <p class="element"><%=@student.sit_academica%></p></div>
@@ -15,58 +15,55 @@
       <%end%>
     <%end%>
   </div>
+</div>
 
-  <div class="column-flex-div" style="width: 60%; justify-content: inherit">
-    <p class="bold">Ultimos registros</p>
-    <table class="table">
-      <thead>
-          <tr>
-            <th scope="col">Laboratorio</th>
-            <th scope="col">Hora de registro</th>
-            <th scope="col">Fecha de registro</th>
-            <th scope="col">Tipo</th>
-          </tr>
-      </thead>
-      <tbody id="records">
-        <tr> 
-          <%@lasets_records.each do |record|%>
+<div class="column-flex-div" style="width: 60%; justify-content: inherit">
+  <p class="bold">Ultimos registros</p>
+  <table class="table">
+    <thead>
+        <tr>
+          <th scope="col">Laboratorio</th>
+          <th scope="col">Hora de registro</th>
+          <th scope="col">Fecha de registro</th>
+          <th scope="col">Tipo</th>
+        </tr>
+    </thead>
+    <tbody id="records">
+        <%@lasets_records.each do |record|%>
+          <tr> 
             <td scope="row"><%=@labs.find(record.lab_id).nombre%></td>
             <td><%=record.created_at.to_s.split(' ')[0]%></td>
             <td><%=record.created_at.to_s.split(' ')[1]%></td>
             <td><%=record.tipo == 't' ? "Ingreso": "Salida" %></td>
-          <%end%>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="column-flex-div" style="width: 60%; justify-content: inherit">
-    <p class="bold">Faltas</p>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Laboratorio</th>
-          <th scope="col">Fecha</th>
-          <th scope="col">Hora</th>
-          <th scope="col">Descripción</th>
-        </tr>
-      </thead>
-      <tbody id="records">
-        <tr> 
-          <%@fouls.each do |record|%>
+          </tr>
+        <%end%>
+    </tbody>
+  </table>
+</div>
+
+<div class="column-flex-div" style="width: 60%; justify-content: inherit">
+  <p class="bold">Faltas</p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Laboratorio</th>
+        <th scope="col">Fecha</th>
+        <th scope="col">Hora</th>
+        <th scope="col">Descripción</th>
+      </tr>
+    </thead>
+    <tbody id="records">
+        <%@fouls.each do |record|%>
+          <tr> 
             <td scope="row"><%=@labs.find(record.lab_id).nombre%></td>
             <td><%=record.created_at.to_s.split(' ')[0]%></td>
             <td><%=record.created_at.to_s.split(' ')[1]%></td>
             <td><p><%=record.description%></p></td>
-          <%end%>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+          </tr>
+        <%end%>
+    </tbody>
+  </table>
 </div>
-
-
-
-
 
 
 <%= link_to 'Volver', students_path %>
