--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -1,93 +1,72 @@
 </head>
 <body>
-	<div class="container-contact100">
-		<div class="wrap-contact100">
-			<form class="contact100-form" id="visitForm">
+  <div class="container-contact100">
+    <div class="wrap-contact100">
+      <%= form_with url: visits_path, method: :post, local: true, id: "visitForm" do |form| %>
 
-				<a href=<%=slideshow_path%> class="btn btn-secondary"> Volver </a>
-				<span class="contact100-form-title">
-					Registro Manual y Visitas
-				</span>
-                <p>
-                Personas que estén registradas en el sistema y no porten su TUC ingresar solamente el RUN y Laboratorio.
-                </p>
+        <a href="<%= slideshow_path %>" class="btn btn-secondary"> Volver </a>
+        <span class="contact100-form-title">
+          Registro Manual y Visitas
+        </span>
+        <p>
+          Personas que estén registradas en el sistema y no porten su TUC ingresar solamente el RUN y Laboratorio.
+        </p>
 
-				<div class="wrap-input100" id= "runField">
-					<span class="label-input100">Ingrese RUN *</span>
-					<input class="input100" id="run" type="text" name="rut" placeholder="Sin guion ej: 123456780">
-					<span class="label-input100" style="color:red; visibility:hidden;" id="lenghtError" >RUN ingresado es demasiado corto</span>
-					<span class="label-input100" style="color:red ; visibility:hidden; padding-left: 90px" id="invalidError" >RUN ingresado es invalido</span>
-				</div>
+        <div class="wrap-input100" id="runField">
+          <span class="label-input100">Ingrese RUN *</span>
+          <%= form.text_field :rut, class: 'input100', id: 'run', placeholder: 'Sin guion ej: 123456780' %>
+          <span class="label-input100" style="color:red; visibility:hidden;" id="lenghtError">RUN ingresado es demasiado corto</span>
+          <span class="label-input100" style="color:red ; visibility:hidden; padding-left: 90px" id="invalidError">RUN ingresado es invalido</span>
+        </div>
 
-				<div class="wrap-input100 input100-select bg1">
-					<span class="label-input100">¿Eres estudiante UC? </span>
-					<div>
-						<select class="input-form" name="uc_student" id="uc_student">
-							<option>Sí</option>
-							<option selected>No</option>
-						</select>
-						<div class="dropDownSelect2"></div>
-					</div>
-				</div>
+        <div class="wrap-input100 input100-select bg1">
+          <span class="label-input100">¿Eres estudiante UC? </span>
+          <div>
+            <%= form.select :uc_student, [['Sí', 'Sí'], ['No', 'No']], {}, class: 'input-form' %>
+            <div class="dropDownSelect2"></div>
+          </div>
+        </div>
 
-				<div class="wrap-input100 bg1">
-					<span class="label-input100">Insitución que pertenece</span>
-					<input class="input100" id="institution" type="text" name="institucion" placeholder="ej: Universidad Católica">
-				</div>
+        <div class="wrap-input100 bg1">
+          <span class="label-input100">Insitución que pertenece</span>
+          <%= form.text_field :institucion, class: 'input100', id: 'institution', placeholder: 'ej: Universidad Católica' %>
+        </div>
 
+        <div class="wrap-input100 input100-select bg1">
+          <span class="label-input100">Laboratorio</span>
+          <div>
+            <%= form.collection_select :lab_id, @labs, :id, :nombre, {}, class: 'input-form' %>
+            <div class="dropDownSelect2"></div>
+          </div>
+        </div>
 
-				<div class="wrap-input100 input100-select bg1">
-					<span class="label-input100">Laboratorio</span>
-					<div>
-						<select class="input-form" name="lab_id" id="lab">
-                            <%=@labs.each do |lab|%>
-							<option value=<%=lab.id%>> <%=lab.nombre%></option>
-							<%end%>
-						</select>
-						<div class="dropDownSelect2"></div>
-					</div>
-				</div>
+        <div class="wrap-input100 input100-select bg1">
+          <span class="label-input100">Motivo de visita </span>
+          <div>
+            <%= form.select :motivo, ['Investigación', 'Emprendimiento', 'Curso', 'Taller', 'Conocer Espacio', 'Otro'], {}, class: 'input-form' %>
+            <div class="dropDownSelect2"></div>
+          </div>
+        </div>
 
+        <div class="wrap-input100 bg1" id="otro-motivo">
+          <span class="label-input100">Otro</span>
+          <%= form.text_field :other, class: 'input100', id: 'otro', placeholder: 'ej: Consulta por maquinaria' %>
+        </div>
 
-				<div class="wrap-input100 input100-select bg1">
-					<span class="label-input100">Motivo de visita </span>
-					<div>
-						<select class="input-form" name="motivo" id="motivo">
-                            <option>Investigación</option>
-							<option>Emprendimiento</option>
-							<option>Curso</option>
-							<option>Taller</option>
-                            <option>Conocer Espacio</option>
-                            <option>Otro</option>
-						</select>
-						<div class="dropDownSelect2"></div>
-					</div>
-				</div>
+        <div class="wrap-input100 bg1" id="contador">
+          <span class="label-input100">Cuantas personas son</span>
+          <%= form.text_field :quantity, class: 'input100', id: 'counter', placeholder: 'ej: 15' %>
+        </div>
 
-                <div class="wrap-input100 bg1" id="otro-motivo">
-					<span class="label-input100">Otro</span>
-					<input class="input100" id="otro" type="text" name="other" placeholder="ej: Consulta por maquinaria">
-				</div>
+        <div class="container-contact100-form-btn">
+          <%= form.submit 'Ingresar', class: 'contact100-form-btn' %>
+        </div>
 
-
-                <div class="wrap-input100 bg1" id="contador">
-					<span class="label-input100">Cuantas personas son</span>
-					<input class="input100" type="text" id="counter" name="quantity"placeholder="ej: 15">
-				</div>
-
-				<div class="container-contact100-form-btn">
-					<button class="contact100-form-btn" type="button" onClick="window.postForm();" id="button">
-						<span>
-							Ingresar
-							<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
-						</span>
-					</button>
-				</div>
-
-			</form>
-		</div>
-	</div>
+      <% end %>
+    </div>
+  </div>
 </body>
+
 </html>
 
 
