--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -101,7 +101,7 @@ run.addEventListener('focusout', function (event) {
 });
   
 okButton.addEventListener('click', function (event) {
-  visitForm.submit();
+  window.postForm();
 });
 
 function checkRut(rut) {
