--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -122,7 +122,7 @@ run.addEventListener('focusout', function (event) {
 });
   
 okButton.addEventListener('click', function (event) {
-	window.postForm;
+	window.postForm();
 });
 
 function checkRut(rut) {
