--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -1,6 +1,6 @@
 </head>
 <body>
-	<%= javascript_pack_tag 'application' %>
+	<%= javascript_pack_tag 'javascripts/application' %>
 	<div class="container-contact100">
 		<div class="wrap-contact100">
 			<form class="contact100-form" id="visitForm">
