--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -1,6 +1,5 @@
 </head>
 <body>
-	<%= javascript_pack_tag 'javascripts/application' %>
 	<div class="container-contact100">
 		<div class="wrap-contact100">
 			<form class="contact100-form" id="visitForm">
@@ -123,7 +122,7 @@ run.addEventListener('focusout', function (event) {
 });
   
 okButton.addEventListener('click', function (event) {
-	window.postForm();
+	visitForm.submit();
 });
 
 function checkRut(rut) {
