--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -122,6 +122,7 @@ run.addEventListener('focusout', function (event) {
 });
   
 okButton.addEventListener('click', function (event) {
+	event.preventDefault();
 	visitForm.submit();
 });
 
