--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -76,7 +76,7 @@
 				</div>
 
 				<div class="container-contact100-form-btn">
-					<button class="contact100-form-btn" type="button" onClick="window.postForm(event);" id="button">
+					<button class="contact100-form-btn" type="button" onClick="window.postForm(event);" id="button" disabled>
 						<span>
 							Ingresar
 							<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
